Added cargo-maven2-plugin configuration